# contextcli

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
.windsurf/skills/contextcli/: SKILL.md
crates/contextcli/: Cargo.toml
crates/contextcli-core/: Cargo.toml
crates/contextcli-core/src/: error.rs  jwt.rs  lib.rs  project.rs
crates/contextcli-core/src/adapter/: generic.rs  mod.rs  types.rs
crates/contextcli-core/src/db/: migrations.rs  mod.rs
crates/contextcli-core/src/profile/: mod.rs  types.rs
crates/contextcli-core/src/router/: launcher.rs  mod.rs
crates/contextcli-core/src/vault/: file_vault.rs  keychain.rs  mod.rs
crates/contextcli/src/: main.rs  output.rs
crates/contextcli/src/commands/: apps.rs  default.rs  doctor.rs  forward.rs  import.rs  link.rs  login.rs  logout.rs  mod.rs  profiles.rs  rename.rs  shell.rs
distribution/: build-release.sh
distribution/homebrew/: contextcli.rb
docs/: SIGNING.md
homebrew/Casks/: contextcli-gui.rb
homebrew/Formula/: contextcli.rb
scripts/: prepare-sidecar.sh
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  app.css
ui/src/components/: AddProfileDialog.tsx  AppDetail.tsx  ProfileCard.tsx  Sidebar.tsx  StatusBadge.tsx  StatusBar.tsx
ui/src/lib/: api.ts  types.ts
