[workspace]
members = [
    "crates/contextcli-core",
    "crates/contextcli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
security-framework = "3"
security-framework-sys = { version = "2", features = ["OSX_10_15"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "6"
colored = "3"
which = "7"
toml = "0.8"
tauri = { version = "2", features = ["devtools"] }
tauri-build = "2"
