[package]
name = "contextcli-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
contextcli-core = { path = "../crates/contextcli-core" }
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[lib]
name = "contextcli_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
