[package]
name = "contextcli-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
# chrono not needed — timestamps stored as TEXT in SQLite
rusqlite.workspace = true
tracing.workspace = true
secrecy.workspace = true
security-framework.workspace = true
directories.workspace = true
which.workspace = true
toml.workspace = true
