[package]
name = "contextcli-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tracing.workspace = true
secrecy.workspace = true
directories.workspace = true
which.workspace = true
toml.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
serde_yaml.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
